--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - lilo-network
 
   minio:
-    image: minio/minio:RELEASE.2023-11-01T21-49-40Z
+    image: minio/minio:latest
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
@@ -30,7 +30,7 @@ services:
       - lilo-network
 
   mailhog:
-    image: mailhog/mailhog:v1.0.1
+    image: mailhog/mailhog
     ports:
       - "8025:8025"
       - "1025:1025"
