--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -1,4 +1,3 @@
-# apps/backend/Dockerfile
 FROM node:18-alpine
 
 WORKDIR /app
@@ -8,8 +7,9 @@ RUN npm install -g pnpm && pnpm install
 
 COPY . .
 
+RUN pnpm run db:generate
 RUN pnpm run build
 
 EXPOSE 4000
 
-CMD ["pnpm", "run", "start:prod"]
+CMD ["node", "dist/main.js"]
