--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,14 +1,23 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "description": "Lilo Market Backend API",
+  "main": "dist/main.js",
   "scripts": {
     "build": "nest build",
-    "start": "node dist/main.js",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main.js",
-    "db:generate": "prisma generate",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:migrate": "prisma migrate dev --name init",
+    "db:generate": "prisma generate",
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
@@ -17,6 +26,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/config": "^3.0.0",
+    "@nestjs/typeorm": "^10.0.0",
     "@prisma/client": "^5.0.0",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
@@ -39,13 +49,39 @@
     "@types/node": "^20.3.1",
     "@types/bcrypt": "^5.0.0",
     "@types/nodemailer": "^6.4.8",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "prettier": "^3.0.0",
     "prisma": "^5.0.0",
     "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
