--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -7,7 +7,9 @@ RUN npm install -g pnpm && pnpm install
 
 COPY . .
 
-RUN pnpm run db:generate
+# Создаем символическую ссылку для Prisma
+RUN mkdir -p prisma && cp -r prisma/* prisma/ 2>/dev/null || true
+
 RUN pnpm run build
 
 EXPOSE 4000
