--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "Lilo Market Backend API",
   "main": "dist/main.js",
   "scripts": {
